...
                textAlign = TextAlign.Center
            )
        },
        text = {
            Text(
                text = text,
                modifier = Modifier.testTag("text_alert_dialog_simple")
            )
        },
        onDismissRequest = onClickOk,
        confirmButton = {
            Button(
                onClick = onClickOk,
...
